# janus

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION.md  OPENCODE_TOOLS.md  PLAN_CACHE.md  PLAN_IMPORT_DESIGN.md  PLAN_IMPORT_IMPLEMENTATION.md  README.md  build.rs  package-lock.json  package.json  release.sh  tsconfig.json
.github/workflows/: release.yml
.opencode-staging/agent/: janus-build.md  janus-plan.md  janus-resolve-phase.md  janus-resolve-ticket.md
.opencode-staging/tool/: janus_bulk.ts  janus_deps.ts  janus_plan.ts  janus_ticket.ts
benches/: cache.rs
crates/janus-schema/: Cargo.toml  build.rs
docs/: cache.md  commands.md  getting-started.md  hooks.md  mcp.md  plan-import-format.md  plans.md  reference.md  remote-sync.md  semantic-search.md  tui.md
hook_recipes/auto-label/: README.md  config.yaml
hook_recipes/blocked-alert/: README.md  config.yaml
hook_recipes/changelog/: README.md  config.yaml
hook_recipes/daily-digest/: README.md  config.yaml
hook_recipes/discord-notify/: README.md  config.yaml
hook_recipes/git-sync/: README.md  config.yaml
hook_recipes/slack-notify/: README.md  config.yaml
hook_recipes/templates/: README.md  config.yaml
hook_recipes/time-tracking/: README.md  config.yaml
scripts/: build-release.sh
src/: archive.rs  cache.rs  cache_error.rs  cli.rs  cli.ts  config.rs  entity.rs  error.rs  finder.rs  graph.rs  lib.rs  locator.rs  macros.rs  main.rs  markdown_formatter.rs  next.rs  parser.rs  paths.rs  plan.rs  plan_parser.rs  plan_types.rs  test_guards.rs  ticket.rs  types.rs  types.rs.bak  utils.rs
src/cache/: database.rs  embeddings.rs  mod.rs  paths.rs  queries.rs  search.rs  sync.rs  traits.rs  types.rs  watcher.rs
src/commands/: add-note.ts  add_note.rs  archive.rs  board.rs  cache.rs  config.rs  create.rs  create.ts  dep.rs  dep.ts  dep_tree.rs  doctor.rs  edit.rs  edit.ts  events.rs  graph.rs  help.ts  hook.rs  index.ts  interactive.rs  io_helpers.rs  link.rs  link.ts  ls.rs  ls.ts  migrate-beads.ts  mod.rs  next.rs  plan.rs  query.rs  query.ts  remote_browse.rs  remote_tui.rs  search.rs  set.rs  show.rs  show.ts  status.rs  status.ts  sync.rs  (+2 more)
src/display/: cli_formatting.rs  data_formatting.rs  formatters.rs  mod.rs
src/doc/: chunker.rs  mod.rs  parser.rs  types.rs
src/embedding/: mod.rs  model.rs  search.rs
src/events/: mod.rs  types.rs
src/formatting/: mod.rs
src/fs/: mod.rs
src/hooks/: mod.rs  runner.rs  types.rs
src/lib/: parser.ts  result.ts  ticket.ts  types.ts  utils.ts
src/mcp/: format.rs  mod.rs  requests.rs  resources.rs  tools.rs  types.rs
src/objective/: builder.rs  mod.rs  parser.rs  serialize.rs  status.rs  types.rs
src/plan/: editor.rs  file.rs  locator.rs  mod.rs  parser.rs  status.rs  types.rs
src/query/: mod.rs  sort.rs
src/remote/: config.rs  error.rs  github.rs  linear.rs  mod.rs
src/repository/: mod.rs
src/status/: mod.rs  plan.rs
src/storage/: mod.rs
src/store/: doc_search.rs  embeddings.rs  mod.rs  queries.rs  search.rs  watcher.rs
src/ticket/: builder.rs  content.rs  editor.rs  file.rs  locator.rs  manipulator.rs  mod.rs  parser.rs  repository.rs  validate.rs
src/tui/: action_queue.rs  analytics.rs  board.rs  edit.rs  edit_state.rs  handlers.rs  hooks.rs  mod.rs  navigation.rs  repository.rs  screen_base.rs  search.rs  search_orchestrator.rs  state.rs  sync_handler.rs  theme.rs  view.rs
src/utils/: dir_scanner.rs  id.rs  io.rs  mod.rs  text.rs  validation.rs
tests/: commands_test.rs  completions_test.rs  config_test.rs  frontmatter_edge_cases.rs  hooks_test.rs  integration_test.rs  mcp_integration_test.rs  mcp_test.rs  remote_test.rs  tui_board_test.rs  tui_remote_test.rs  tui_view_test.rs  yaml_deserialization_adversarial.rs
tests/cache/: mod.rs  plan_cache_test.rs
tests/commands/: aliases_test.rs  archive_test.rs  create_test.rs  dep_test.rs  graph_test.rs  link_test.rs  ls_test.rs  misc_test.rs  mod.rs  set_test.rs  show_test.rs  status_test.rs
tests/common/: fixtures.rs  mock_data.rs  mod.rs  snapshot.rs  tui_helpers.rs
tests/hooks/: hooks_test.rs  mod.rs
tests/plan/: create_test.rs  import_test.rs  ls_test.rs  manipulation_test.rs  misc_test.rs  mod.rs  next_test.rs  show_test.rs  status_test.rs
tests/snapshots/: tui_board_test__active_column.snap  tui_board_test__all_columns_hidden.snap  tui_board_test__board_search.snap  tui_board_test__board_search_no_results.snap  tui_board_test__board_with_tickets.snap  tui_board_test__editing_mode.snap  tui_board_test__empty_board.snap  tui_board_test__hidden_columns.snap  tui_board_test__loading_board.snap  tui_board_test__multiple_tickets_per_column.snap  tui_board_test__nav_right_twice.snap  tui_board_test__nav_with_row_adjustment.snap  tui_board_test__no_janus_dir.snap  tui_board_test__search_active.snap  tui_board_test__search_exited.snap  tui_board_test__selected_ticket.snap  tui_board_test__toggle_current_column.snap  tui_board_test__toggle_multiple_columns.snap  tui_remote_test__detail_visible.snap  tui_remote_test__error_modal.snap  tui_remote_test__extend_selection.snap  tui_remote_test__filter_modal.snap  tui_remote_test__help_modal.snap  tui_remote_test__link_mode.snap  tui_remote_test__nav_local_down_5.snap  tui_remote_test__nav_remote_down_3.snap  tui_remote_test__nav_scroll_bottom.snap  tui_remote_test__nav_scroll_top.snap  tui_remote_test__page_up.snap  tui_remote_test__remote_empty_view.snap  tui_remote_test__remote_search.snap  (+24 more)
(+185 files in other folders)
