[package]
name = "janus"
version = "1.0.0"
edition = "2024"
description = "Plain-text issue tracking"
license = "MIT"
repository = "https://github.com/divmain/janus"

[[bin]]
name = "janus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
jiff = "0.2"
thiserror = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
regex = "1"
sha2 = "0.10"
rand = "0.9"

# Async runtime for HTTP clients
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# GitHub API client
octocrab = "0.48"

# HTTP client for Linear API
reqwest = { version = "0.12", features = ["json"] }

# TUI Framework (React-like declarative API)
iocraft = "0.7"

# Fuzzy search for filtering
fuzzy-matcher = "0.3"


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
